# routes/ventasRoutes.js
@@ -1,7 +1,16 @@
+// routes/ventasRoutes.js
 const express = require('express');
-const router = express.Router();
-const { registrarVenta } = require('../controllers/ventasController');
+const router  = express.Router();
 
-router.post('/ventas', registrarVenta);
+const {
+    listarVentas,
+    registrarVenta
+} = require('../controllers/ventasController');
+
+// GET /api/ventas
+router.get('/', listarVentas);
+
+// POST /api/ventas/registrar
+router.post('/registrar', registrarVenta);
 
 module.exports = router;
